tests/rosetta/out/Rust/averages-median-3.error
rustc error: exit status 1
warning: unnecessary parentheses around assigned value
  --> /tmp/TestMochiToRustaverages-median-32628387570/001/prog.rs:34:22
   |
34 |                 k -= (px + 1);
   |                      ^      ^
   |
   = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
   |
34 -                 k -= (px + 1);
34 +                 k -= px + 1;
   |

error[E0425]: cannot find function `now` in this scope
 --> /tmp/TestMochiToRustaverages-median-32628387570/001/prog.rs:6:26
  |
6 |             let mut px = now() % arr.len() as i32;
  |                          ^^^ not found in this scope

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/TestMochiToRustaverages-median-32628387570/001/prog.rs:41:61
   |
41 |         let half = ((arr.len() as i32 as f64) / (2 as f64)).parse::<i32>().unwrap();
   |                                                             ^^^^^ method not found in `f64`

error: aborting due to 2 previous errors; 1 warning emitted

Some errors have detailed explanations: E0425, E0599.
For more information about an error, try `rustc --explain E0425`.
